--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 
 	<body>
-	<h1 id="points"></h1>
+	<h1 id="points">0</h1>
 	<div class="container">
 		<div class="row">
 			<div class="hole"></div>
